<resources>
    <string name="app_name">NewsApp v.2</string>

    <!-- Text to display in the list when there are no news [CHAR LIMIT=NONE] -->
    <string name="empty_message">No news found. Please reload.</string>

    <!-- Error message when there is no internet connectivity [CHAR LIMIT=NONE] -->
    <string name="no_internet_connection">No internet connection.</string>

    <!-- Welcome message -->
    <string name="welcome">Welcome to Premier League NewsApp. \nPlease scroll for the latest news.</string>

    <!-- Welcome message -->
    <string name="press">Press to read more</string>

    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
    <string name="settings_menu_item">Settings</string>

    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">News Settings</string>

    <!-- Strings For League Preference [CHAR LIMIT=30] -->
    <string name="settings_leagues_label">League</string>
    <string name="settings_leagues_key" translatable="false">league</string>
    <string name="settings_leagues_default" translatable="false">@string/settings_premier_league_value</string>

    <!-- Label for Premier League option [CHAR LIMIT=20] -->
    <string name="settings_premier_league_label">Premier League</string>
    <string name="settings_premier_league_value" translatable="false">football/premierleague</string>

    <!-- Label for La Liga option [CHAR LIMIT=20] -->
    <string name="settings_la_liga_label">La Liga</string>
    <string name="settings_la_liga_value" translatable="false">football/laligafootball</string>

    <!-- Label for La Liga option [CHAR LIMIT=20] -->
    <string name="settings_bundesliga_label">Bundesliga</string>
    <string name="settings_bundesliga_value" translatable="false">football/bundesligafootball</string>

    <!-- Label for La Liga option [CHAR LIMIT=20] -->
    <string name="settings_serie_a_label">Serie A</string>
    <string name="settings_serie_a_value" translatable="false">football/serieafootball</string>

    <!-- Strings For Order By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order by</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_newest_value</string>

    <!-- Label for "newest" option [CHAR LIMIT=20] -->
    <string name="settings_newest_label">Newest</string>
    <string name="settings_newest_value" translatable="false">newest</string>

    <!-- Label for "newest" option [CHAR LIMIT=20] -->
    <string name="settings_oldest_label">Oldest</string>
    <string name="settings_oldest_value" translatable="false">oldest</string>

    <!-- Label for "newest" option [CHAR LIMIT=20] -->
    <string name="settings_relevance_label">Most Relevant</string>
    <string name="settings_relevance_value" translatable="false">relevance</string>

    <!-- Strings For Page Size Preference [CHAR LIMIT=30] -->
    <string name="settings_page_size_label">Page Size</string>
    <string name="settings_page_size_key" translatable="false">page-size</string>
    <string name="settings_page_size_default" translatable="false">20</string>

</resources>